# Nova-Log

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  logger.cpp
src/core/include/nova/logger/: logger.hpp
